tests/bad/ident_type4.radl
s : string "bonjour"

t : topic { FIELDS
    s2 = s
}
